{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 39,
  "lineage": "6a842c34-8a76-7de1-1f7c-5c261d32447c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0455a9b1150fc160e",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0c4f684930d98d95c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c4f684930d98d95c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thomas-eng-48-first-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d43101b8b16d65a1",
            "private_dns": "ip-10-0-0-105.eu-west-1.compute.internal",
            "private_ip": "10.0.0.105",
            "public_ip": "34.244.54.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07f7a441f5dbacb8f",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2b080b79645543e",
            "tags": {
              "Name": "Eng48-Thomas-N-Python-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07259010537d9484a"
            ]
          },
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08aef7fa064c16fcc",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Thomas-N-Python-app - Python App Internet gateway"
            },
            "vpc_id": "vpc-09e1d4866ac0b1042"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0df7cfe763a6ead0d",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08aef7fa064c16fcc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-Thomas-N-Python-app - Python App Route Table"
            },
            "vpc_id": "vpc-09e1d4866ac0b1042"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebd530e5b6b1753e",
            "route_table_id": "rtb-0df7cfe763a6ead0d",
            "subnet_id": "subnet-0b2b080b79645543e"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_route_table.app_route",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-07259010537d9484a",
            "description": "Set inbound and outbound traffic",
            "egress": [],
            "id": "sg-07259010537d9484a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Eng48-Thomas-N-Python-app-security-group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng48-Thomas-N-Python-app - Security"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e1d4866ac0b1042"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0b2b080b79645543e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b2b080b79645543e",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Thomas-N-Python-app - Subnet"
            },
            "vpc_id": "vpc-09e1d4866ac0b1042"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-09e1d4866ac0b1042",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f6b6db467bd14c41",
            "default_route_table_id": "rtb-095d444b122692ec1",
            "default_security_group_id": "sg-01ff06664fc35dc4b",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e1d4866ac0b1042",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-095d444b122692ec1",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Thomas-N-Python-app - VPC"
            }
          }
        }
      ]
    }
  ]
}